Fixed doughnut chart height stretching problem

--- a/PlanIT-Front-End-React/src/components/DashboardContent/DashboardContentStyle.css
+++ b/PlanIT-Front-End-React/src/components/DashboardContent/DashboardContentStyle.css
@@ -36,6 +36,6 @@
 }
 
 .chart canvas {
-    max-width: 100% !important;
+    width: 100% !important;
     height: 100% !important;
 }
